# DealHub

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  raport.md  requirements.txt
.github/workflows/: docker.yml  release.yml
coolify/: Dockerfile  docker-compose.yml
nginx/: default.conf
scripts/: install.ps1  install.sh  run.ps1  run.sh  stock_data.ps1  stock_data.sh  upgrade.sh  upgrade_coolify.sh
src/: manage.py
src/accounts/: admin.py  models.py
src/accounts/fixtures/: accounts.json
src/accounts/migrations/: 0001_initial.py  0002_alter_account_groups_alter_account_user_permissions.py  0003_account_avatar.py
src/categories/: admin.py  models.py
src/categories/fixtures/: categories.json
src/categories/migrations/: 0001_initial.py
src/dealhub/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/offers/: admin.py  forms.py  models.py  urls.py  views.py
src/offers/fixtures/: offers.json
src/offers/migrations/: 0001_initial.py  0002_offer_description.py  0003_offer_category.py  0004_offer_created_at.py  0005_offer_reviews.py
src/reviews/: admin.py  forms.py  models.py  views.py
src/reviews/migrations/: 0001_initial.py  0002_alter_review_author.py  0003_review_review.py
src/reviews/templatetags/: attribute.py
src/templates/: index.html
src/templates/allauth/: profile.html
src/templates/categories/: button.html
src/templates/layout/: base.html  footer.html  header.html  (+1 more)
src/todo/: admin.py  models.py  urls.py  views.py
srcipts/: run.sh  upgrade.sh
(+15 files in other folders)
