[tool.poetry]
name = "dealhub"
version = "0.0.3"
description = "DealHub is a a web application that allow users to post deals on products and services.."
authors = ["Adrian Ciolek <ciolek.adrian@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg = {extras = ["binary"], version = "^3.1.19"}
django-allauth = "^0.63.0"
gunicorn = "^22.0.0"
django-htmx = "^1.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
